# medince_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MedSafe_Backend_Architecture.pptx  MedSafe_Backend_Architecture_v2.pptx  MedSafe_Backend_Architecture_v3.pptx  MedSafe_PPT_Speech_v3.md  README.md  STAGE10_REPORT_CSDN.md  STAGE11_REPORT_CSDN.md  STAGE12_REPORT_CSDN.md  STAGE1_REPORT_CSDN.md  STAGE2_REPORT_CSDN.md  STAGE3_REPORT_CSDN.md  STAGE4_REPORT_CSDN.md  STAGE5_REPORT_CSDN.md  STAGE6_REPORT_CSDN.md  STAGE7_REPORT_CSDN.md  STAGE8_REPORT_CSDN.md  STAGE9_REPORT_CSDN.md  config.yaml  demo_case.txt  docker-compose.yml  pyproject.toml  requirements.txt
data/: integration_test_results.json  smiles_cache.db
datasets/: README.md
docs/: AUDIT_INTEGRITY_REPORT.md  DEBATE_ARCHITECTURE.md  MEDSAFE_FULL_REPORT.md  MIMIC_III_SETUP.md  REFERENCES.md  STAGE11_UPGRADE_PLAN.md  STAGE11_VALIDATION_REPORT.md  STAGE9_UPGRADE_PLAN.md  STAGE9_VALIDATION_REPORT.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
models/: .gitkeep
scripts/: analyze_ddi_scores.py  build_demo_formulary.py  build_mimic_cxr_manifest.py  build_stage11_kb.py  build_stage9_kb.py  demo_formulary_data.py  dev_web.sh  download_models.py  drug_template_catalog.py  enhance_department_base_prompts.py  fetch_demo_datasets.py  fetch_imaging_samples.py  generate_benchmark_cases.py  generate_demo_data.py  generate_department_case_templates.py  generate_ppt.py  generate_stage11_clinical_benchmark.py  generate_stage11_validation_report.py  import_twosides.py  (+17 more)
(+737 files in other folders)
